--- a/Olympiad/app/src/main/res/values/strings.xml
+++ b/Olympiad/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Olympiad</string>
     <string name="title_activity_maps">Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="spinner_item">
+        <item>All</item>
+        <item>Age</item>
+        <item>Gender</item>
+        <item>Reason</item>
+        <item>Skill</item>
+    </string-array>
 </resources>
