--- a/Olympiad/app/src/main/res/values/strings.xml
+++ b/Olympiad/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Olympiad</string>
     <string name="title_activity_maps">Map</string>
     <string name="banner_ad_unit_id">ca-app-pub-1143273463088335/4133919206</string>
+    <string name="invitation_message">Please join me on Olympiad</string>
+    <string name="invitation_cta">Call to action</string>
+    <string name="invitation_title">Olympiad Invite</string>
 
     <string-array name="spinner_item">
         <item>All</item>
